--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^7.3.0",
     "next": "16.1.4",
     "next-auth": "^4.24.13",
+    "next-themes": "^0.4.6",
     "pg": "^8.17.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
